@@ -14,7 +14,8 @@ Version 5.1.4
   - Fixed problem with installer where attempting to install over a failed uninstall could 
     leave multiple clients registered in machine.config.  (Bug #31731)      
   - Marked MySqlDbType.Datetime obsolete; replaced with DateTime (just corrected capitalization) (Bug #26344)
-  
+  - fixed code where we were returning bit(1) as boolean but mysql treats tinyint(1) as boolean
+    (bug #27959)
       
 Version 5.1.3 - 9/19/2007
   - Fixed problem with using a stored procedure that takes a parameter as a select routine
